--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-.electron-builder.config.json
-
 # Node modules
 node_modules/
 npm-debug.log*
@@ -9,6 +7,7 @@ yarn-error.log*
 # Logs
 logs/
 *.log
+~/Library/Logs/HTMLServe.log
 
 # OS
 .DS_Store
@@ -17,6 +16,10 @@ logs/
 dist/
 out/
 *.tgz
+
+# Temporary files
+.env.local
+.env
 
 # macOS extended attributes
 .AppleDouble
