--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "HTMLserve",
-    "version": "1.0.0",
+    "name": "htmlserve",
+    "version": "1.0.1",
     "main": "cli.js",
     "scripts": {
         "start": "node cli.js",
